--- a/json-demo/src/main/resources/application.properties
+++ b/json-demo/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-
+spring.datasource.url=jdbc:h2:mem:cardb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
